# ztm-rust

.devcontainer/: devcontainer.json
activities/: Cargo.toml
activities/src/activitylib/: math.rs
activities/src/activitylib/math/: arithmetic.rs
clipstash/: .gitignore  Cargo.toml
clipstash/src/lib/data/: mod.rs  model.rs
clipstash/src/lib/domain/: time.rs
clipstash/src/lib/domain/clip/: mod.rs
clipstash/src/lib/domain/clip/field/: clip_id.rs  expires.rs  hits.rs  mod.rs  password.rs  shortcode.rs
