[package]
name = "activities"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
thiserror = "1.0.57"
crossbeam-channel = "*"
parking_lot = "*"

[lib]
name = "activity"
path = "src/activitylib/activity.rs"
